# context-budgeter

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: SECURITY_REVIEW_2026-07.md
examples/: task-query.txt
src/context_budgeter/: __init__.py  __main__.py  _version.py  budgeter.py
tests/: test_budgeter.py
